Fleshing out header bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="headerBar">
+        <div class="logoText">Header Logo</div>
+        <div class="navButton">Header Link One</div>
+        <div class="navButton">Header Link Two</div>
+        <div class="navButton">Header Link Three</div>
+    </div>
+    <div class="hero"></div>
     <div class="content"></div>
     <div class="quotes"></div>
     <div class="contact"></div>
