Adding and styling hero text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
         <div class="navButton">Header Link Two</div>
         <div class="navButton">Header Link Three</div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
+        <div class="flexContainer">
+            <div class="heroText">
+                <span class="mainText">This website is awesome</span>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            </div>
+            <div class="heroImage">
+                Picture
+            </div>
+        </div>
+    </div>
     <div class="content"></div>
     <div class="quotes"></div>
     <div class="contact"></div>
