--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <div class="flexContainer">
             <div class="heroText">
                 <span class="mainText">This website is awesome</span>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p> 
+                <p><a href="#" class="button">Sign up</a></p>
             </div>
             <div class="heroImage">
-                Picture
+                
             </div>
         </div>
     </div>
