Added content placeholder HTML and CSS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             </div>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="header">Some random information.</div>
+        <div class="flexContainer">
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+        </div>
+    </div>
     <div class="quotes"></div>
     <div class="contact"></div>
     <div class="footer"></div>
