--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="tile"></div>
         </div>
     </div>
-    <div class="quotes"></div>
+    <div class="quotes">
+        <div class="container">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.<h3>- Thor, God of Thunder</h3></div>
+    </div>
     <div class="contact"></div>
     <div class="footer"></div>
 </body>
