--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div class="container">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.<h3>- Thor, God of Thunder</h3></div>
     </div>
     <div class="contact"></div>
-    <div class="footer"></div>
+    <div class="footer">
+        Copyright © drowsyDragoness 2022
+    </div>
 </body>
 </html>
