--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
     <div class="quotes">
         <div class="container">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.<h3>- Thor, God of Thunder</h3></div>
     </div>
-    <div class="contact"></div>
+    <div class="contact">
+        <div class="bannerContainer">
+            <div class="textBox">
+                <p><span>Call to action! It's time!</span></p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="buttonBox">
+                <a href="#" class="button">Sign up</a>
+            </div>
+        </div>
+    </div>
     <div class="footer">
         Copyright © drowsyDragoness 2022
     </div>
